--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -26,6 +26,7 @@
   justify-content: center;
   text-align: center;
   color: white;
+  transition: background-image 1s ease-in-out; /* Add transition for background image */
 }
 
 .hero-overlay-spareroom {
